test/files/errors/invalidRetValue.jg
_main int () { "hello" return; }